src/test/ui/safe-extern-statics-mut.stderr
error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/safe-extern-statics-mut.rs:11:13
   |
LL |     let b = B;
   |             ^ dereference of raw pointer
   |
   = note: raw pointers may be NULL, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/safe-extern-statics-mut.rs:12:14
   |
LL |     let rb = &B;
   |              ^^ dereference of raw pointer
   |
   = note: raw pointers may be NULL, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/safe-extern-statics-mut.rs:13:14
   |
LL |     let xb = XB;
   |              ^^ dereference of raw pointer
   |
   = note: raw pointers may be NULL, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/safe-extern-statics-mut.rs:14:15
   |
LL |     let xrb = &XB;
   |               ^^^ dereference of raw pointer
   |
   = note: raw pointers may be NULL, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0133`.
